--- a/source/blog/5.html.markdown
+++ b/source/blog/5.html.markdown
@@ -1,7 +1,7 @@
 ---
 title: こころ
 date: 2014-08-15
-tags: タグ2
+tags: tag1
 ---
 
 私はその人を常に先生と呼んでいた。だからここでもただ先生と書くだけで本名は打ち明けない。これは世間を憚かる遠慮というよりも、その方が私にとって自然だからである。私はその人の記憶を呼び起すごとに、すぐ「先生」といいたくなる。筆を執っても心持は同じ事である。よそよそしい頭文字などはとても使う気にならない。
