記事をMarkdownにしてインポート

--- a/source/blog/3.html.markdown
+++ b/source/blog/3.html.markdown
@@ -1,9 +1,21 @@
 ---
-title: 坊っちゃん
-date: 2014-08-13
-tags: tag3
+title: デザイナ&エンジニア交流会-first contact-（の二次会）に参加しました
+date: 2011-11-29
+tags: design
+visual: /images/blog/20111129_1.jpg
 ---
 
-親譲りの無鉄砲で小供の時から損ばかりしている。
+僕が参加しているSetucoCMSプロジェクト主催のデザイナ&エンジニア交流会-first contact-が、11月26日にオラクル青山センターで開催されました。  
+分業化が進むIT業界において、デザイナーとエンジニアはお互いのことをもっとよく知るべきじゃね？という趣旨の、今までにありそうでなかったイベントです。  
+ちなみに今回のイラストは僭越ながら私めが描かせていただきました（洒落乙デザイナー男子とギーク系エンジニア女子！）。
 
-小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ。別段深い理由でもない。新築の二階から首を出していたら、同級生の一人が冗談に、いくら威張っても、そこから飛び降りる事は出来まい。弱虫やーい。と囃したからである。小使に負ぶさって帰って来た時、おやじが大きな眼をして二階ぐらいから飛び降りて腰を抜かす奴があるかと云ったから、この次は抜かさずに飛んで見せますと答えた。
+実は別件で交流会自体には参加することができなかったため、飛び入りで二次会から参加させていただきました。いざ振り返ってみると、趣旨そっちのけでデザイナーの方ばかりとお話していた気もしますが（…）、デザイナーとエンジニアの関わり方について議論を交わすこともできたので、よい経験になったと思います。
+
+交流会についてはUSTREAMの録画がありますので、興味のある方はぜひご覧ください。LTやワールドカフェなど、おもしろいことをやってますよ！
+
+**USTREAM**  
+[http://www.ustream.tv/channel/デザイナ-エンジニア交流会-first-contact](http://www.ustream.tv/channel/デザイナ-エンジニア交流会-first-contact)
+
+勉強会は今後もコンスタントに開催していく予定なので、次こそはがっつり参加したいと思っています。
+
+余談ですが、技術系の勉強会はたくさんあるのに、デザイン系の勉強会が中々見つからず、日々悶々としています。そんな勉強会があればぜひ参加したいのですが、もしご存知の方がいらっしゃれば教えていただけると幸いです。
