--- a/source/blog/4.html.markdown
+++ b/source/blog/4.html.markdown
@@ -1,7 +1,77 @@
 ---
-title: 吾輩は猫である
-date: 2014-08-14
-tags: tag4
+title: 　（アクセシビリティも考えて）画像の下にできる余白をなくす
+date: 2011-12-09
+tags: web
 ---
 
-吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。ただ彼の掌に載せられてスーと持ち上げられた時何だかフワフワした感じがあったばかりである。掌の上で少し落ちついて書生の顔を見たのがいわゆる人間というものの見始であろう。この時妙なものだと思った感じが今でも残っている。第一毛をもって装飾されべきはずの顔がつるつるしてまるで薬缶だ。その後猫にもだいぶ逢ったがこんな片輪には一度も出会わした事がない。のみならず顔の真中があまりに突起している。そうしてその穴の中から時々ぷうぷうと煙を吹く。どうも咽せぽくて実に弱った。これが人間の飲む煙草というものである事はようやくこの頃知った。
+会社で教わったので備忘録として。
+
+画像の下に余白ができてしまう現象については、様々なサイトで対処法が解説されています。  
+しかし、それぞれに問題点があったりなかったりするので、今回は考えうる限りでベストな方法を紹介したいと思います。
+
+
+### そもそもなんで余白ができるの
+
+![](/images/blog/20111209_2.jpg)
+
+ブロックレベル要素に内包されるimgタグは、下端がテキストのベースラインに揃えられます。アルファベットには、「g」や「j」のようにベースラインを超えるものが存在するため、多くの文字は下端に余白を持つことになります。HTMLでは、imgタグもベースラインに揃えられる仕様になっているため、同じように余白が空いてしまうのですね。
+
+### 行内の垂直位置はvertical-alignプロパティで指定可能
+
+![](/images/blog/20111209_2_2.jpg)
+
+そこで登場するのがvertical-alignプロパティ。これはインライン要素の行内での垂直位置を指定するためのプロパティです。これさえわかってしまえば、あとは簡単。imgタグの親要素に以下の指定をすることで、あっというまに余白がなくなります。
+
+    hoge{
+        vertical-align:text-bottom;
+    }
+
+やったー消えたよー
+
+### ところがどっこい
+
+![](/images/blog/20111209_4.jpg)
+
+実は、この方法だけでは解決できない問題があります。試しにフォントサイズを大きくしてしましょう。今度は画像の上に余白が空いてしまいました。
+
+### なんでやねん
+
+imgタグが「行」の中に収まっているということは、前述の解説でおわかりいただけたかと思います。当たり前の話ですが、文字が大きくなれば、その分だけ行の高さも大きくなります（※1）。でも、文字が大きくなったからといって、画像は大きくならないので、行の高さだけが増えてしまい、前述のように余白が空いてしまうのです。
+
+<small>※1 line-heightに単位を指定をしている場合はこの限りでありません</small>
+
+### 行の高さはline-heightプロパティで指定可能
+
+![](/images/blog/20111209_3_2.jpg)
+
+じゃあ行の高さをなくせばいいんじゃね？ということで、行の高さを指定するline-heightプロパティを、前述のcssに追記します。
+
+    hoge{
+        vertical-align:text-bottom;
+        line-height:0;
+    }
+
+やったー消えたよー
+
+### ところがどっこい part2
+
+これで解決したかのように思われますが、実はもう1つだけ落とし穴がありました。
+
+### 画像が表示されない場合に文字が読めなくなる
+
+![](/images/blog/20111209_5.jpg)
+
+なんらかの原因で画像が表示されなかったり、そもそもユーザー側で画像を表示しない設定にしている場合は、imgタグで指定したalt文が表示されるようになります。このときのalt文は、imgタグに指定されているcssが適用されるので、先ほどの指定では行が重なってしまい、文字が読めなくなってしまいます。イレギュラーなケースではありますが、これはアクセシビリティ的によろしくない。というわけで、前置きが長くなりましたが、今回提案するベストな解決方法は以下の通りです。
+
+### imgタグにdisplay:block;を指定する
+
+![](/images/blog/20111209_3.jpg)
+
+そもそもimgタグが行の中に収まってしまうのは、imgタグがインライン要素であるためです。であれば、imgタグをブロックレベル要素にしてしまいましょう。下記の指定で、文字が大きくなっても余白ができず、画像が非表示になってもalt文がきちんと表示されるようになります。
+
+    hoge img{
+        display:block;
+    }
+
+### あとがき
+アクセシビリティはユーザビリティと違って目に見えないものなので、考えるのがとても大変ですよね。色々な事例に触れて、少しずつノウハウを身に付けていきたいと思います。
