--- a/source/blog/7.html.markdown
+++ b/source/blog/7.html.markdown
@@ -1,7 +1,166 @@
 ---
-title: 吾輩は猫である
-date: 2014-08-17
-tags: tag3
+title: FireworksユーザーがPhotoshopではできないと思っている12の機能
+date: 2013-06-02
+tags: design
 ---
 
-吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。ただ彼の掌に載せられてスーと持ち上げられた時何だかフワフワした感じがあったばかりである。掌の上で少し落ちついて書生の顔を見たのがいわゆる人間というものの見始であろう。この時妙なものだと思った感じが今でも残っている。第一毛をもって装飾されべきはずの顔がつるつるしてまるで薬缶だ。その後猫にもだいぶ逢ったがこんな片輪には一度も出会わした事がない。のみならず顔の真中があまりに突起している。そうしてその穴の中から時々ぷうぷうと煙を吹く。どうも咽せぽくて実に弱った。これが人間の飲む煙草というものである事はようやくこの頃知った。
+ご存知だとは思いますが、先日Fireworksのメジャーアップデートが終了するという発表がありました。
+[Adobe、Web画像ツール「Fireworks」終了へ – ITmedia ニュース](http://www.itmedia.co.jp/news/articles/1305/07/news030.html)
+熱心なFireworksユーザーが多い弊社でも、社内のあちこちから悲鳴が……。  
+Fireworksを使い続ける人もいれば、Sketchを試してみる人もいたりなど、その後の対応は様々でしたが、やはり候補に上がってくるのはPhotoshopへの乗り換え。そこで、社内のFireworksユーザーにPhotoshopの不満な点をヒアリングして、その解決策をまとめてみることにしました。
+
+1. [ピクセルに最適化されていない](#p1)
+2. [シンボルがない](#p2)
+3. [オブジェクトを直接選択できない](#p3)
+4. [シェイプの大きさや位置を数値で指定できない](#p4)
+5. [角丸の大きさを後から変更できない](#p5)
+6. [「線」が使えない](#p6)
+7. [色やフォントの検索・置換ができない](#p7)
+8. [複雑なパスの操作ができない](#p8)
+9. [カスタムアンチエイリアスがない](#p9)
+10. [レイヤースタイルのコピーができない](#p10)
+11. [スライスがめんどくさい](#p11)
+12. [ページ機能やステート機能がない](#p12)
+
+<div id="p1"></div>
+
+### 1. ピクセルに最適化されていない
+
+![](/images/blog/20130602_1.jpg)
+
+CS6から「ベクトルツールと変更をピクセルグリッドにスナップ」という機能が追加され、シェイプだろうがスマートオブジェクトだろうが何だろうが、どんなものもピクセルに吸着できるようになりました。  
+「環境設定」＞「一般」から設定することができます。
+
+<div id="p2"></div>
+
+### 2. シンボルがない
+
+![](/images/blog/20130602_2.jpg)
+
+「スマートオブジェクト」機能を使えば、Fireworksのシンボルと同じように、1つのオブジェクトを修正するだけで他のオブジェクトにも変更を適用することができます。
+スマートオブジェクト化したいレイヤーを選択して右クリック＞「スマートオブジェクトに変換」で変換が、スマートオブジェクト化したレイヤーをダブルクリックするか、右クリック＞「コンテンツを編集」で編集が可能です。
+
+<div id="p3"></div>
+
+### 3. オブジェクトを直接選択できない
+
+![](/images/blog/20130602_3.jpg)
+
+移動ツールを選択して、左上のメニューバーに表示される「自動選択」にチェックを入れましょう。レイヤーだけを選択したい場合は、「グループ」となっているプルダウンを「レイヤー」に変更すれば可能です。
+
+<div id="p4"></div>
+
+### 4. シェイプの大きさや位置を数値で指定できない
+
+![](/images/blog/20130602_4.jpg)
+
+シェイプツールを選択してキャンバス上でダブルクリックすると、数値を指定したシェイプを作成することができます。  
+後から変更した場合は、変形時にメニューバーに表示されるXとY（位置）、WとH（大きさ）にpxの単位をつけて数値を入力することで変更が可能です。
+
+<div id="p5"></div>
+
+### 5. 角丸の大きさを後から変更できない
+
+![](/images/blog/20130602_5.jpg)
+
+Photoshop CCの新機能として、ついに角丸の編集が搭載されました！買いましょう（ステマ）
+現状では、Corner EditorというJSXの拡張スクリプトを入れることで実現可能です。
+
+<a href="http://coliss.com/articles/build-websites/operation/design/photoshop-jsx-corner-editor.html">Win/Mac対応、Photoshopで角丸の作成・修正の強力な武器になる機能拡張 -Corner Editor | コリス</a>
+
+<div id="p6"></div>
+
+### 6. 「線」が使えない
+
+![](/images/blog/20130602_6.jpg)
+
+FireworksやIllustratorの「線」という概念ですが、Photoshopでは「ストローク」という名称でCS6から搭載されています。  
+シェイプツールを選択すると、メニューバーに「ストローク」という項目がありますので、そこから色や太さなどを設定することができます。もちろん破線なんかもできます。
+
+<div id="p7"></div>
+
+### 7. 色やフォントの検索・置換ができない
+Photoshopでは**できません**。諦めましょう……。
+
+<div id="p8"></div>
+
+### 8. レイヤースタイルのコピーができない
+
+![](/images/blog/20130602_12.jpg)
+
+レイヤースタイルが適用されているレイヤーを右クリック＞「レイヤースタイルのコピー」を選択すればできます。デフォルトではショートカットに割り当てられていないので、「編集」＞「キーボードショートカットとメニュー」＞「エリア：アプリケーションメニュー」＞「レイヤー」からショートカットを設定しましょう。ちなみに、シェイプでも同じことができますが、テキストのプロパティはコピーができませんので悪しからず……。
+
+<div id="p9"></div>
+
+### 9. カスタムアンチエイリアスがない
+
+![](/images/blog/20130602_8.jpg)
+
+これもPhotoshopではできません……。が、ちょっとめんどくさくてもよければ再現することは可能です。
+
+![](/images/blog/20130602_8_2.jpg)
+
+まず、文字の「強さ」を変えたい場合。レイヤー効果から「ドロップシャドウ」を選択し、「描画モード」を「通常」、「距離」を「0px」、「サイズ」を「0px」と設定します。あとは文字と同じ色を選択すれば、「不透明度」の値で強さの微調整が可能です。難点としては色を変更したいときに二度手間になってしまうこと。めんどくさい人は、テキストをグループ化して、グループにカラーオーバーレイをかけましょう。
+
+![](/images/blog/20130602_8_3.jpg)
+
+次に、文字の「シャープ」を変えたい場合。これは、テキストレイヤーをスマートオブジェクト化して、「フィルター」＞「シャープ」＞「スマートシャープ」で調整が可能です。テキストを打ち直したい場合は、スマートオブジェクトを開いて編集しましょう。
+
+<div id="p10"></div>
+
+### 10. 複雑なパスの操作ができない
+
+![](/images/blog/20130602_11.jpg)
+
+確かCS6からだったと思うのですが、Photoshopにもパスファインダが搭載されています。複数のシェイプを選択して、「レイヤー」＞「シェイプを結合」からシェイプの結合や重なりの削除などを実行することができます。  
+より複雑なパスを扱いたい場合は、Illustratorで作成してからPhotoshopにペーストする際に「スマートオブジェクト」を選択することで、Illustratorでの変更がPhotoshopでも反映されるようになるので、こちらがおすすめかもしれません。
+
+<div id="p11"></div>
+
+### 11. スライスがめんどくさい
+
+![](/images/blog/20130602_9.jpg)
+
+PhotoshopとFireworksではスライスの勝手が違うので、ここではいくつかヒントをご紹介。
+
+まず1つ、スライスしたいオブジェクトを選択して、「レイヤー」＞「レイヤーに基づく新規スライス」とすれば、オブジェクトに沿って自動的にスライスしてくれます。レイヤーを移動してもスライスが追従してくれるのでとても便利なんですが、逆に手動で変更することができないため、範囲を調整したいときは、スライス選択ツールを選んで、右クリック＞「ユーザー定義スライスに変更」としましょう。この機能をショートカットに登録しておけば、さらに盤石！
+
+また、Fireworksではスライスごとに書き出しの設定ができますが、Photoshopでも「Web用に保存する」で設定が可能です。「Web用に保存する」の画面を開き、左上にあるスライス選択ツールを選ぶことで、それぞれのスライスごとに書き出しの設定ができます。
+
+他にも、最近ではSlicyという便利なアプリが登場したので、これを活用するのもいいですね。
+
+[Slicyで面倒なPSDのスライス作業を効率化 !：アシアルブログ](http://blog.asial.co.jp/1118)
+
+<div id="p12"></div>
+
+### 12. ページ機能やステート機能がない
+
+![](/images/blog/20130602_10.jpg)
+
+Fireworksのページ機能にはいくらか劣りますが、Photoshopにも「レイヤーカンプ」という機能があり、これでレイヤーの表示・非表示や位置などを記録することができます。マスターや共有レイヤーについては、スマートオブジェクトを使えば似たようなことができるかも？
+
+また、複数ファイル間でスマートオブジェクトを共有したい場合は、Linksというエクステンションをインストールすることで可能になります。
+
+<a href="http://coliss.com/articles/software/photoshop-extension-linked-smart-objects.html">Win/これは便利！外部ファイルをリンクさせるPhotoshopのエクステンション -Links | コリス</a>
+
+
+-----
+
+というわけでいくつか機能を紹介しました。他にも「これはできないの？」とか「これもできるよ！」などなどありましたら、ぜひご連絡ください。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
