--- a/source/blog/8.html.markdown
+++ b/source/blog/8.html.markdown
@@ -1,9 +1,24 @@
 ---
-title: こころ
-date: 2014-08-18
-tags: tag4
+title: SONY α NEX-5R
+date: 2013-06-10
+tags: design
 ---
 
-私はその人を常に先生と呼んでいた。だからここでもただ先生と書くだけで本名は打ち明けない。これは世間を憚かる遠慮というよりも、その方が私にとって自然だからである。私はその人の記憶を呼び起すごとに、すぐ「先生」といいたくなる。筆を執っても心持は同じ事である。よそよそしい頭文字などはとても使う気にならない。
-　私が先生と知り合いになったのは鎌倉である。その時私はまだ若々しい書生であった。暑中休暇を利用して海水浴に行った友達からぜひ来いという端書を受け取ったので、私は多少の金を工面して、出掛ける事にした。私は金の工面に二、三日を費やした。ところが私が鎌倉に着いて三日と経たないうちに、私を呼び寄せた友達は、急に国元から帰れという電報を受け取った。電報には母が病気だからと断ってあったけれども友達はそれを信じなかった。友達はかねてから国元にいる親たちに勧まない結婚を強いられていた。彼は現代の習慣からいうと結婚するにはあまり年が若過ぎた。それに肝心の当人が気に入らなかった。それで夏休みに当然帰るべきところを、わざと避けて東京の近くで遊んでいたのである。彼は電報を私に見せてどうしようと相談をした。私にはどうしていいか分らなかった。けれども実際彼の母が病気であるとすれば彼は固より帰るべきはずであった。それで彼はとうとう帰る事になった。せっかく来た私は一人取り残された。
-　学校の授業が始まるにはまだ大分日数があるので鎌倉におってもよし、帰ってもよいという境遇にいた私は、当分元の宿に留まる覚悟をした。友達は中国のある資産家の息子で金に不自由のない男であったけれども、学校が学校なのと年が年なので、生活の程度は私とそう変りもしなかった。したがって一人ぼっちになった私は別に恰好な宿を探す面倒ももたなかったのである。
+SONY α NEX-5Rを買いました。パワーズームレンズキットを5万円ちょっとで。3回払いです！
+しばらくはキットレンズで頑張ろうと思っていたのですが、NEX-5Rユーザーの作例を見ていたら我慢できなくなってしまい単焦点レンズも購入……。こちらもSONYのE35mm F1.8 OSSです。  
+そのまま近くのスタバに入って、早速撮影。とろけるようなボケ具合を見て、いい買い物をしたと心底思いました（笑）。
+その後、地元の海に行って色々と撮ってきたので、作例をいくつか掲載してみます。初めてLightroomでRAWから現像してみたのですが、なかなかどうして難しいですね……。撮って出しの写真は[Flickr](https://www.flickr.com/photos/310u8/)にアップしているので、よければこちらもご覧ください。
+
+![](/images/blog/20130610_1.jpg)
+![](/images/blog/20130610_2.jpg)
+![](/images/blog/20130610_3.jpg)
+![](/images/blog/20130610_4.jpg)
+![](/images/blog/20130610_5.jpg)
+![](/images/blog/20130610_6.jpg)
+![](/images/blog/20130610_7.jpg)
+![](/images/blog/20130610_8.jpg)
+![](/images/blog/20130610_9.jpg)
+![](/images/blog/20130610_10.jpg)
+
+Camera / SONY α NEX-5R  
+Lens / SONY E35mm F1.8 OSS SEL35F18
