--- a/source/blog/2.html.markdown
+++ b/source/blog/2.html.markdown
@@ -1,9 +1,30 @@
 ---
-title: こころ
-date: 2014-08-12
-tags: tag2
+title: iPhone4とプロカメラで撮影した箱根湯本
+date: 2011-08-16
+tags: design
 ---
 
-私はその人を常に先生と呼んでいた。だからここでもただ先生と書くだけで本名は打ち明けない。これは世間を憚かる遠慮というよりも、その方が私にとって自然だからである。私はその人の記憶を呼び起すごとに、すぐ「先生」といいたくなる。筆を執っても心持は同じ事である。よそよそしい頭文字などはとても使う気にならない。
-　私が先生と知り合いになったのは鎌倉である。その時私はまだ若々しい書生であった。暑中休暇を利用して海水浴に行った友達からぜひ来いという端書を受け取ったので、私は多少の金を工面して、出掛ける事にした。私は金の工面に二、三日を費やした。ところが私が鎌倉に着いて三日と経たないうちに、私を呼び寄せた友達は、急に国元から帰れという電報を受け取った。電報には母が病気だからと断ってあったけれども友達はそれを信じなかった。友達はかねてから国元にいる親たちに勧まない結婚を強いられていた。彼は現代の習慣からいうと結婚するにはあまり年が若過ぎた。それに肝心の当人が気に入らなかった。それで夏休みに当然帰るべきところを、わざと避けて東京の近くで遊んでいたのである。彼は電報を私に見せてどうしようと相談をした。私にはどうしていいか分らなかった。けれども実際彼の母が病気であるとすれば彼は固より帰るべきはずであった。それで彼はとうとう帰る事になった。せっかく来た私は一人取り残された。
-　学校の授業が始まるにはまだ大分日数があるので鎌倉におってもよし、帰ってもよいという境遇にいた私は、当分元の宿に留まる覚悟をした。友達は中国のある資産家の息子で金に不自由のない男であったけれども、学校が学校なのと年が年なので、生活の程度は私とそう変りもしなかった。したがって一人ぼっちになった私は別に恰好な宿を探す面倒ももたなかったのである。
+夏休みを利用して箱根湯本へ1泊2日の小旅行をしてきました。
+
+景色がとても綺麗だったので、撮った写真を載せてみたいと思います。  
+撮影はiPhone4で、使用したアプリはプロカメラ。フォーカスや露出、ホワイトバランスを調整できる超優れ物です。
+
+![](/images/blog/20110816_1.jpg)
+![](/images/blog/20110816_2.jpg)
+![](/images/blog/20110816_3.jpg)
+![](/images/blog/20110816_4.jpg)
+![](/images/blog/20110816_5.jpg)
+![](/images/blog/20110816_6.jpg)
+![](/images/blog/20110816_7.jpg)
+![](/images/blog/20110816_8.jpg)
+![](/images/blog/20110816_9.jpg)
+![](/images/blog/20110816_10.jpg)
+![](/images/blog/20110816_11.jpg)
+![](/images/blog/20110816_12.jpg)
+![](/images/blog/20110816_13.jpg)
+![](/images/blog/20110816_14.jpg)
+![](/images/blog/20110816_15.jpg)
+![](/images/blog/20110816_16.jpg)
+![](/images/blog/20110816_17.jpg)
+
+全て色調補正済みではありますが、これだったらコンデジはいらないかも……というぐらいには撮れちゃいますね！
