--- a/source/blog/5.html.markdown
+++ b/source/blog/5.html.markdown
@@ -1,9 +1,98 @@
 ---
-title: こころ
-date: 2014-08-15
-tags: tag1
+title: はじめてのSlim
+date: 2012-03-13
+tags: web
 ---
 
-私はその人を常に先生と呼んでいた。だからここでもただ先生と書くだけで本名は打ち明けない。これは世間を憚かる遠慮というよりも、その方が私にとって自然だからである。私はその人の記憶を呼び起すごとに、すぐ「先生」といいたくなる。筆を執っても心持は同じ事である。よそよそしい頭文字などはとても使う気にならない。
-　私が先生と知り合いになったのは鎌倉である。その時私はまだ若々しい書生であった。暑中休暇を利用して海水浴に行った友達からぜひ来いという端書を受け取ったので、私は多少の金を工面して、出掛ける事にした。私は金の工面に二、三日を費やした。ところが私が鎌倉に着いて三日と経たないうちに、私を呼び寄せた友達は、急に国元から帰れという電報を受け取った。電報には母が病気だからと断ってあったけれども友達はそれを信じなかった。友達はかねてから国元にいる親たちに勧まない結婚を強いられていた。彼は現代の習慣からいうと結婚するにはあまり年が若過ぎた。それに肝心の当人が気に入らなかった。それで夏休みに当然帰るべきところを、わざと避けて東京の近くで遊んでいたのである。彼は電報を私に見せてどうしようと相談をした。私にはどうしていいか分らなかった。けれども実際彼の母が病気であるとすれば彼は固より帰るべきはずであった。それで彼はとうとう帰る事になった。せっかく来た私は一人取り残された。
-　学校の授業が始まるにはまだ大分日数があるので鎌倉におってもよし、帰ってもよいという境遇にいた私は、当分元の宿に留まる覚悟をした。友達は中国のある資産家の息子で金に不自由のない男であったけれども、学校が学校なのと年が年なので、生活の程度は私とそう変りもしなかった。したがって一人ぼっちになった私は別に恰好な宿を探す面倒ももたなかったのである。
+業務でSlimを使うことになったため、備忘録を残します。  
+僕も全然わかっていないので、参考程度にしていただければ幸いです……。
+
+### Slimってなに
+Ruby on Railsのテンプレートエンジン  
+[http://slim-lang.com/docs.html](http://slim-lang.com/docs.html)
+
+### テンプレートエンジンってなに
+HTMLと他の言語をごっちゃに書ける便利なもの
+
+以下、SlimでのHTMLの記述方法です。
+
+### 基本
+
+<ul>
+  <li>タグ名␣内容</li>
+  <li>ヤマカッコと閉じタグは省略する</li>
+</ul>
+
+    h1 ほげ
+     
+    　↓
+     
+    <h1>ほげ</h1>
+
+### 属性
+
+<ul>
+  <li>タグ名␣属性名=”値”␣内容</li>
+  <li>カクカッコ[]、ナミカッコ{}、マルカッコ()を使用することもできる</li>
+  <li>id名・class名は属性名を省略できる</li>
+</ul>
+
+    a href="hoge" ほげ
+    a[href="hoge"] ほげ
+    p#hoge.fuga ほげ
+     
+    　↓
+     
+    <a href="hoge">ほげ</a>
+    <a href="hoge">ほげ</a>
+    <p id="hoge" class="fuga">ほげ</p>
+
+### 入れ子
+
+<ul>
+  <li>インデントで階層を表現する</li>
+  <li>divはタグ名を省略できる（id名・class名のみで書ける）</li>
+</ul>
+
+    #hoge
+        ul
+            li ほげ
+            li ふが
+     
+    　↓
+     
+    <div id="hoge">
+        <ul>
+            <li>ほげ</li>
+            <li>ふが</li>
+        </ul>
+    </div>
+
+### 複数行
+
+<ul>
+  <li>内容が複数行になる場合は先頭にパイプ|をつける</li>
+</ul>
+
+    p
+        | ほげ
+        br
+        | ふが
+        br
+        | ぴよ
+     
+    　↓
+     
+    <p>ほげ<br />ふが<br />ぴよ</p>
+
+
+### コメント
+
+<ul>
+  <li>Rubyのコメントを使用できる</li>
+</ul>
+
+    / ほげ
+
+とりあえずこれくらい書ければあんまり困らないはず……！  
+新しいことを覚えたら随時更新していきたいと思いま
