--- a/source/blog/6.html.markdown
+++ b/source/blog/6.html.markdown
@@ -1,9 +1,26 @@
 ---
-title: 坊っちゃん
-date: 2014-08-16
-tags: tag2
+title: コーディング時にデザインのズレを確認できるブックマークレット
+date: 2012-06-01
+tags: web
 ---
 
-親譲りの無鉄砲で小供の時から損ばかりしている。
+コーディングをしているときにデザインデータとズレがないか確認するため、PhotoshopやFireworksにキャプチャした画像を貼って、直して、また貼って……みたいなことをよくすると思います。もっとスマートにできたらと思い、ブラウザ上で可能にするブックマークレットを作りました。 
 
-小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ。別段深い理由でもない。新築の二階から首を出していたら、同級生の一人が冗談に、いくら威張っても、そこから飛び降りる事は出来まい。弱虫やーい。と囃したからである。小使に負ぶさって帰って来た時、おやじが大きな眼をして二階ぐらいから飛び降りて腰を抜かす奴があるかと云ったから、この次は抜かさずに飛んで見せますと答えた。
+### 使い方
+[overlay design](javascript:%20(function(){var%20d%20=%20document;var%20s%20=%20d.createElement('script');s.src%20=%20'http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js';d.body.appendChild(s);setTimeout(function(){$(function(){var%20path%20=%20prompt('%E7%94%BB%E5%83%8F%E3%81%AE%E3%83%91%E3%82%B9%E3%82%92%E5%85%A5%E5%8A%9B%E3%81%97%E3%81%A6%E3%81%8F%E3%81%A0%E3%81%95%E3%81%84',%20'.png');$.ajax({type:'GET',url:path,success:function(){$('html').prepend('<img%20src=\''%20+%20path%20+%20'\'%20id=\'overlayDesignImg\'>');$('img#overlayDesignImg').css({'position':'absolute','top':0,'left':0,'z-index':2147483646,'opacity':0.5});$('img#overlayDesignImg').mousedown(function(e){var%20top%20=%20parseInt($('img#overlayDesignImg').css('top'));var%20left%20=%20parseInt($('img#overlayDesignImg').css('left'));var%20x%20=%20e.pageX;var%20y%20=%20e.pageY;$(document).bind('mousemove',%20function(e){$('img#overlayDesignImg').css({'top':top%20+%20e.pageY%20-%20y,'left':left%20+%20e.pageX%20-%20x,});return%20false;}).one('mouseup',%20function(e){$(document).unbind('mousemove');});return%20false;});$(document).keydown(function(e){var%20top%20=%20parseInt($('img#overlayDesignImg').css('top'));var%20left%20=%20parseInt($('img#overlayDesignImg').css('left'));var%20shift%20=%200;if(e.shiftKey){shift%20=%2010;}switch(e.which){case%2037:$('img#overlayDesignImg').css({'left':left%20-%201%20-%20shift});break;case%2038:$('img#overlayDesignImg').css({'top':top%20-%201%20-%20shift});break;case%2039:$('img#overlayDesignImg').css({'left':left%20+%201%20+%20shift});break;case%2040:$('img#overlayDesignImg').css({'top':top%20+%201%20+%20shift});break;}return%20false;});var%20overlayDesignFlg%20=%20true;$('html').prepend('<div%20id=\'overlayDesignBtn\'>%C3%97</div>');$('div#overlayDesignBtn').css({'position':'fixed','top':'25px','right':'25px','z-index':2147483647,'width':'25px','height':'25px','border':'2px%20solid%20#000','background':'#fff','cursor':'pointer','font-size':'12px','font-weight':'bold','text-align':'center','line-height':'25px','vertical-align':'middle'}).click(function(){if(overlayDesignFlg){$('img#overlayDesignImg').css({'display':'none'});$(this).html('%E2%97%8F');overlayDesignFlg%20=%20false;}else{$('img#overlayDesignImg').css({'display':'block'});$(this).html('%C3%97');overlayDesignFlg%20=%20true;}});},error:function(){alert('%E7%94%BB%E5%83%8F%E3%81%8C%E8%A6%8B%E3%81%A4%E3%81%8B%E3%82%8A%E3%81%BE%E3%81%9B%E3%82%93');}});});},%201000);})();)
+
+上記のリンクをブックマークバーに追加して、使用したいページにて実行してください。
+
+### 機能
+* 絶対パス・相対パス・ルート相対パスによるファイルの指定（使用するページから見て）  
+（http://www.example.com/img.png, ../img.png, /img.png)
+* 右上のボタンで表示・非表示の切り替え
+* ドラッグ&ドロップで画像を移動
+* 矢印キーで画像を1px移動
+* SHIFT+矢印キーで画像を10px移動
+
+### 追記
+
+[maki : a free web design mock-up tool for pixel perfect layouts](http://makiapp.com/)
+
+同じような機能でさらに高機能なブックマークレットを見つけてしまいました…！こちらはファイルの選択や、透明度の変更なども可能になっています。
