--- a/source/blog/10.html.markdown
+++ b/source/blog/10.html.markdown
@@ -9,6 +9,8 @@ visual: /images/blog/20140827_1.jpg
 自分のサイトだし好き勝手にやりたかったので、UIもUXもクソもないようなデザインになりました。怒らないでください。
 
 構築は流行りのMiddleman + GitHub Pagesです。deployで記事を公開するとなんかかっこよくていいです。  
-実はMiddleman童貞だったので、まともにいじったのは今回が初めてでした。Railsに近い感覚でとっつきやすかったです。
+偉そうなことを言っておいて実はMiddleman童貞だったので、まともにいじったのは今回が初めてでした。Railsに近い感覚でとっつきやすかったです。
 
-リニューアルをしてもブログを書かない問題は解決されていないわけなんですが（…）、しばらくはくだらないことをつらつら書いていきたいと思います。よしなに。
+[310u8.github.io](https://github.com/310u8/310u8.github.io/tree/develop)
+
+リニューアルをしてもブログを書かない問題は解決されていないわけなんですが（…）、しばらくはくだらないことをつらつら書いていきたいと思います。したらな！
