--- a/source/blog/8.html.markdown
+++ b/source/blog/8.html.markdown
@@ -1,7 +1,7 @@
 ---
 title: SONY α NEX-5R
 date: 2013-06-10
-tags: design
+tags: photograph
 ---
 
 SONY α NEX-5Rを買いました。パワーズームレンズキットを5万円ちょっとで。3回払いです！
