--- a/source/blog/12.html.markdown
+++ b/source/blog/12.html.markdown
@@ -24,5 +24,5 @@ tags: design
 
 -----
 
-このように、ソフトウェア上は正確な配置をしても、人間の目には気持ち悪く見えてしまうことが多々あります。  
+このように、ソフトウェア上は正確な配置をしていても、人間の目には気持ち悪く見えてしまうことが多々あります。  
 グラフィックソフトにはたくさんの便利な機能がありますが、最終的には自分の感覚を信じてデザインができるといいですね。
