URL間違ってた

--- a/source/blog/15.html.markdown
+++ b/source/blog/15.html.markdown
@@ -85,7 +85,7 @@ GOING UNDER GROUND - トワイライト
 
 -----
 
-<a href="http://www.amazon.co.jp/dp/B002HJX41" target="_blank"><img src="http://ecx.images-amazon.com/images/I/61Ejyfsep1L._SL1500_.jpg" width="400"></a>
+<a href="http://www.amazon.co.jp/dp/B002HJX41Y" target="_blank"><img src="http://ecx.images-amazon.com/images/I/61Ejyfsep1L._SL1500_.jpg" width="400"></a>
 
 Base Ball Bear - ホワイトワイライト
 
